fixed horizontal scrollbar issue

--- a/src/Styles/Separator.css
+++ b/src/Styles/Separator.css
@@ -3,6 +3,6 @@
   height: 6em;
 }
 
-.Seperator {
+/* .Seperator {
   width: 100vw;
-}
+} */
